--- a/css/profile-page/your-meal-offers/styles.css
+++ b/css/profile-page/your-meal-offers/styles.css
@@ -86,7 +86,14 @@
         height: 3.5em;
     }
 
+    .past-meal-offers-area>.offer-container>.picture>.controlls {
+        width: 60%;
+        float: right;
+        height: 5em;
+    }
+
     .active-meal-offers-area>.offer-container>.picture>.controlls>.button-group,
+    .past-meal-offers-area>.offer-container>.picture>.controlls>.button-group,
     .pending-reservations-area>.offer-container>.picture>.controlls>.button-group,
     .accepted-reservations-area>.offer-container>.picture>.controlls>.button-group,
     .completed-reservations-area>.offer-container>.picture>.controlls>.button-group {
@@ -96,6 +103,7 @@
     }
 
     .active-meal-offers-area>.offer-container>.picture>.controlls>.button-group>button,
+    .past-meal-offers-area>.offer-container>.picture>.controlls>.button-group>button,
     .pending-reservations-area>.offer-container>.picture>.controlls>.button-group>button,
     .accepted-reservations-area>.offer-container>.picture>.controlls>.button-group>button,
     .completed-reservations-area>.offer-container>.picture>.controlls>.button-group>button {
@@ -115,7 +123,14 @@
         height: 6em;
     }
 
+    .past-meal-offers-area>.offer-container>.picture>.time-date {
+        position: relative;
+        top: 25%;
+        height: 8em;
+    }
+
     .active-meal-offers-area>.offer-container>.picture>.time-date>div,
+    .past-meal-offers-area>.offer-container>.picture>.time-date>div,
     .pending-reservations-area>.offer-container>.picture>.time-date>div,
     .accepted-reservations-area>.offer-container>.picture>.time-date>div,
     .completed-reservations-area>.offer-container>.picture>.time-date>div {
@@ -126,6 +141,7 @@
     }
 
     .active-meal-offers-area>.offer-container>.picture>.time-date>div+div,
+    .past-meal-offers-area>.offer-container>.picture>.time-date>br+div,
     .pending-reservations-area>.offer-container>.picture>.time-date>div+div,
     .accepted-reservations-area>.offer-container>.picture>.time-date>div+div,
     .completed-reservations-area>.offer-container>.picture>.time-date>div+div {
@@ -144,7 +160,18 @@
         margin-top: 2%;
     }
 
+    .active-meal-offers-area>.offer-container>.picture>.time-date>div>.icon,
+    .past-meal-offers-area>.offer-container>.picture>.time-date>div>.icon,
+    .pending-reservations-area>.offer-container>.picture>.time-date>div>.icon,
+    .accepted-reservations-area>.offer-container>.picture>.time-date>div>.icon,
+    .completed-reservations-area>.offer-container>.picture>.time-date>div>.icon {
+        font-size: 30pt;
+        color: white;
+        border: none;
+    }
+
     .active-meal-offers-area>.offer-container>.picture>.time-date>div>p,
+    .past-meal-offers-area>.offer-container>.picture>.time-date>div>p,
     .pending-reservations-area>.offer-container>.picture>.time-date>div>p,
     .accepted-reservations-area>.offer-container>.picture>.time-date>div>p,
     .completed-reservations-area>.offer-container>.picture>.time-date>div>p {
@@ -171,7 +198,6 @@
 
     .offer-container>.info {
         width: 100%;
-        height: 11em;
         border: 2px solid white;
         display: inline-block;
     }
@@ -249,7 +275,10 @@
     .completed-reservations-area>.offer-container>.info>.cell>.main>.image {
         height: 1.3em;
         margin-top: -7px;
-        margin-left: -8px;
+        margin-left: -12px;
+        padding: 5px;
+        -webkit-filter: brightness(0) invert(1);
+        filter: brightness(0) invert(1);
     }
 
     .active-meal-offers-area>.offer-container>.info>.detail-pills,
@@ -259,7 +288,6 @@
     .completed-reservations-area>.offer-container>.info>.detail-pills {
         width: 100%;
         position: relative;
-        bottom: 4px;
     }
 
     .active-meal-offers-area>.offer-container>.info>.detail-pills>li,
